--- a/reactfrontend/src/App.css
+++ b/reactfrontend/src/App.css
@@ -1,6 +1,11 @@
-.PostingForm {
+.PostingPaper {
   padding: 1rem;
   margin: 2rem;
+}
+
+.PostingForm {
+  display: flex;
+  flex-direction: column;
 }
 
 body {
